[package]
name = "dbus-macros"
version = "0.2.3"
authors = ["Antoni Boucher <bouanto@zoho.com>",
           "Zeeshan Ali <zeeshanak@gnome.org>"]
license = "MIT"
description = "Convenient macros to use the dbus crate"
repository = "https://github.com/antoyo/dbus-macros-rs"

[dependencies]
dbus = "^0.5"
